--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -6,5 +6,9 @@ global:
   default_ec2_keyname: autotaskapps
   default_platform: 64bit Amazon Linux 2016.03 v2.1.3 running Python 3.4
   default_region: eu-west-1
+  option_settings:
+  - namespace: aws:elasticbeanstalk:container:python
+    option_name: WSGIPath
+    value: atvalidation/wsgi.py
   profile: eb-cli
   sc: git
