Using environment variables now for security .

--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ EMAIL_HOST_USER = 'info@studiointhecloud.co.uk'
 EMAIL_HOST_PASSWORD = 'Mnschnaap1!'
 SERVER_EMAIL = 'info@studiointhecloud.co.uk'
 DEFAULT_FROM_EMAIL = 'info@studiointhecloud.co.uk'
+
+test
