--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml.env
+!.elasticbeanstalk/*.global.yml*.env
