--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,14 +1,26 @@
 branch-defaults:
   master:
-    environment: autotaskapps-prod
+    environment: null
+    group_suffix: null
 global:
-  application_name: autotaskapps
-  default_ec2_keyname: autotaskapps
-  default_platform: 64bit Amazon Linux 2016.03 v2.1.3 running Python 3.4
+  application_name: atvalidation
+  default_ec2_keyname: null
+  default_platform: Python 3.4
   default_region: eu-west-1
-  option_settings:
-  - namespace: aws:elasticbeanstalk:container:python
-    option_name: WSGIPath
-    value: atvalidation/wsgi.py
   profile: eb-cli
   sc: git
+option_settings:
+  "aws:elasticbeanstalk:application:environment":
+    DJANGO_SETTINGS_MODULE: "autotask.settings"
+    PYTHONPATH: "$PYTHONPATH"
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: "autotask/wsgi.py"
+packages:
+  yum:
+    postgresql93-devel: []
+container_commands:
+  01_migrate:
+    command: "python manage.py migrate"
+    leader_only: true
+  02_collectstatic:
+  command: "python manage.py collectstatic --noinput"
