--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,26 +1,10 @@
 branch-defaults:
   master:
-    environment: autotaskvalidation-prod
-    group_suffix: null
-container_commands:
-  01_migrate:
-    command: python manage.py migrate
-    leader_only: true
-  02_collectstatic: null
-  command: python manage.py collectstatic --noinput
+    environment: autotaskvalidation-dev
 global:
   application_name: autotaskvalidation
   default_ec2_keyname: autotaskvalidation
-  default_platform: Python 3.4
+  default_platform: 64bit Amazon Linux 2016.03 v2.1.3 running Python 3.4
   default_region: eu-west-1
   profile: eb-cli
   sc: git
-option_settings:
-  aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: autotask.settings
-    PYTHONPATH: $PYTHONPATH
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: autotask/wsgi.py
-packages:
-  yum:
-    postgresql93-devel: []
