--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -8,3 +8,7 @@ global:
   default_region: eu-west-1
   profile: eb-cli
   sc: git
+packages:
+  yum:
+    postgresql93: []
+    postgresql93-devel: []
