--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,5 +1,15 @@
+option_settings:
+  "aws:elasticbeanstalk:application:environment":
+    DJANGO_SETTINGS_MODULE: "autotask.settings"
+    PYTHONPATH: "$PYTHONPATH"
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: "autotask/wsgi.py"
+packages:
+  yum:
+    postgresql93-devel: []
+    postgresql-devel: []
 container_commands:
-  setenvironmentvars:
+  01_envs:
     command: "eb setenv DEFAULT_FROM_EMAIL=info@studiointhecloud.co.uk"
     command: "eb setenv EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend"
     command: "eb setenv EMAIL_HOST=smtp.office365.com"
@@ -12,10 +22,5 @@ container_commands:
     command: "eb setenv RDS_HOSTNAME=aa1lig8af53vwbc.czfdqpop0u9j.eu-west-1.rds.amazonaws.com"
     command: "eb setenv RDS_PORT=5432"
     command: "eb setenv RDS_USERNAME=postgres"
+    command: "eb setenv RDS_PASSWORD=Mnschnaap1"
     command: "eb setenv SECRET_KEY=''%_*+go01-jr&(+)3rl1tt8j3d#11prafeqji=c4lo1o+c417rq'"
-  01pippsycopg2:
-    command: "sudo pip install psycopg2"
-    leader_only: true
-  02migrate:
-    command: "python manage.py migrate"
-    leader_only: true
