--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -7,7 +7,6 @@ option_settings:
 packages:
   yum:
     postgresql93-devel: []
-    postgresql-devel: []
 container_commands:
   01_envs:
     command: "eb setenv DEFAULT_FROM_EMAIL=info@studiointhecloud.co.uk"
@@ -24,3 +23,18 @@ container_commands:
     command: "eb setenv RDS_USERNAME=postgres"
     command: "eb setenv RDS_PASSWORD=Mnschnaap1"
     command: "eb setenv SECRET_KEY=''%_*+go01-jr&(+)3rl1tt8j3d#11prafeqji=c4lo1o+c417rq'"
+  02_export:
+    command: "export DEFAULT_FROM_EMAIL=info@studiointhecloud.co.uk"
+    command: "export EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend"
+    command: "export EMAIL_HOST=smtp.office365.com"
+    command: "export EMAIL_HOST_PASSWORD=Mnschnaap1!"
+    command: "export EMAIL_HOST_USER=info@studiointhecloud.co.uk"
+    command: "export EMAIL_PORT=587"
+    command: "export EMAIL_USE_TLS=TRUE"
+    command: "export SERVER_EMAIL=info@studiointhecloud.co.uk"
+    command: "export RDS_DB_NAME=ebdb"
+    command: "export RDS_HOSTNAME=aa1lig8af53vwbc.czfdqpop0u9j.eu-west-1.rds.amazonaws.com"
+    command: "export RDS_PORT=5432"
+    command: "export RDS_USERNAME=postgres"
+    command: "export RDS_PASSWORD=Mnschnaap1"
+    command: "export SECRET_KEY=''%_*+go01-jr&(+)3rl1tt8j3d#11prafeqji=c4lo1o+c417rq'"
