--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -22,4 +22,4 @@ container_commands:
     command: "export RDS_PORT=5432"
     command: "export RDS_USERNAME=postgres"
     command: "export RDS_PASSWORD=Mnschnaap1"
-    command: "export SECRET_KEY=''%_*+go01-jr&(+)3rl1tt8j3d#11prafeqji=c4lo1o+c417rq'"
+    command: "export SECRET_KEY='%_*+go01-jr&(+)3rl1tt8j3d#11prafeqji=c4lo1o+c417rq'"
