--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -8,7 +8,7 @@ packages:
   yum:
     postgresql93-devel: []
 container_commands:
-  02_export:
+  01_export:
     command: "export DEFAULT_FROM_EMAIL=info@studiointhecloud.co.uk"
     command: "export EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend"
     command: "export EMAIL_HOST=smtp.office365.com"
@@ -18,8 +18,12 @@ container_commands:
     command: "export EMAIL_USE_TLS=TRUE"
     command: "export SERVER_EMAIL=info@studiointhecloud.co.uk"
     command: "export RDS_DB_NAME=ebdb"
-    command: "export RDS_HOSTNAME=aa1lig8af53vwbc.czfdqpop0u9j.eu-west-1.rds.amazonaws.com"
+    command: "export RDS_HOSTNAME=aa128ae0uiotahf.czfdqpop0u9j.eu-west-1.rds.amazonaws.com"
     command: "export RDS_PORT=5432"
     command: "export RDS_USERNAME=postgres"
     command: "export RDS_PASSWORD=Mnschnaap1"
     command: "export SECRET_KEY='%_*+go01-jr&(+)3rl1tt8j3d#11prafeqji=c4lo1o+c417rq'"
+  02_pip:
+    command: "sudo pip install -r requirements.txt"
+  03_migrate:
+    command: "python manage.py migrate"
